Fix a bad regression caused by a bug in the stricter utf-8 validation code that caused us to replace latin1 glyphs (e.g. accented chars) with the unicode replacement character.

BUG:150381

svn path=/branches/KDE/3.5/kdelibs/; revision=719916